{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 95,
  "lineage": "26d6cca3-f801-5119-5008-209cac17142b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "zabbix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-022d4249382309a48",
            "arn": "arn:aws:ec2:us-east-1:187705265721:instance/i-00c1185eb16d9351a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00c1185eb16d9351a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "zabbix-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ef7d8c771d2054a4",
            "private_dns": "ip-172-31-84-182.ec2.internal",
            "private_ip": "172.31.84.182",
            "public_dns": "ec2-34-227-14-230.compute-1.amazonaws.com",
            "public_ip": "34.227.14.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-062bb4e735b3de9be",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20211125005946014600000002"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-64265f45",
            "tags": {
              "Name": "AWS-Zabbix"
            },
            "tags_all": {
              "Name": "AWS-Zabbix"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-088a98cd114a56656"
            ]
          },
          "dependencies": [
            "aws_security_group.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:187705265721:security-group/sg-088a98cd114a56656",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-088a98cd114a56656",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20211125005946014600000002",
            "name_prefix": "terraform-",
            "owner_id": "187705265721",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-5051de2d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "zabbix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:187705265721:security-group/sg-03704862de2fbcd43",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-03704862de2fbcd43",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 10050,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 10050
              }
            ],
            "name": "terraform-20211125005946008500000001",
            "name_prefix": "terraform-",
            "owner_id": "187705265721",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-5051de2d"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}